fix(v-text-field): fix input overflow
input needs width declaration to avoid overflow issues

--- a/src/stylus/components/_text-fields.styl
+++ b/src/stylus/components/_text-fields.styl
@@ -79,7 +79,7 @@ rtl(v-text-field-rtl, "v-text-field")
     padding: 8px 0 8px
     line-height: 1
     max-width: 100%
-    width: auto
+    width: 100%
 
   .v-input__append-inner
     align-self: flex-start
